--- a/templates/year.html
+++ b/templates/year.html
@@ -6,43 +6,18 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        {% block styles %}
-            <!-- Bootstrap CSS -->
-            {{ bootstrap.load_css() }}
-        {% endblock %}
-
         <title>Weather View</title>
         {% endblock %}
 
-        {% from 'bootstrap4/form.html' import render_field %}
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">What's Your Name?</a>
-          <button class="navbar-toggler btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon text-light"></span>
-          </button>
-          <!-- <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link text-light active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="/api/v1.0/precipitation">Precipitation</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="/api/v1.0/stations">Stations</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="/api/v1.0/tobs">Tempurature Observations</a>
-              </li>
-            </ul>
-          </div> -->
+    
         </div>
       </nav>
-
       <div class="container p-5">
 
         <div id='chart' class='chart'”></div>
@@ -59,14 +34,12 @@
         {%  endfor %}
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
     <script type='text/javascript'>
       var graphs = {{graphJSON | safe}};
       Plotly.plot('chart',graphs,{});
     </script>
-        {% block scripts %}
-            <!-- Optional JavaScript -->
-            {{ bootstrap.load_js() }}
-        {% endblock %}
+      
     </body>
 </html>
