--- a/templates/year.html
+++ b/templates/year.html
@@ -18,20 +18,26 @@
     
         </div>
       </nav>
-      <div class="container p-5">
-
-        <div id='chart' class='chart'”></div>
+      <div class="container-fluid">
+        <div class="row" style= 'text-align: center'>
+          <div class="col-3">
+            <h3>Boy Names</h3>
+            <div id='chart' class='chart' >
+            </div>
+          </div>
+          <div class="col-3">
+            <h3>Girl Names</h3>
+            <div id='chart1' class='chart1'”></div>
+          </div>
+          <div class="col-6">
+            <h3>Top Names</h3>
+            <div id='chart2' class='chart2'”></div>
+          </div>
+        </div>
         
-        {% for value in query %}
-              <div class="row p-3">
-                <div class="col-3"> {{ value['Name'] }} </div>
-                <div class="col-3"> {{ value['Year'] }} </div>  
-                <div class="col-3"> {{ value['Sex'] }} </div>
-                <div class="col-3"> {{ value['Count'] }} </div>
-                <div class="col-3"> {{ value['Rank'] }} </div>
-                
-              </div> 
-        {%  endfor %}
+       
+        
+        
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -39,6 +45,13 @@
     <script type='text/javascript'>
       var graphs = {{graphJSON | safe}};
       Plotly.plot('chart',graphs,{});
+
+      var graphs1 = {{graphJSON1 | safe}};
+      Plotly.plot('chart1',graphs1,{});
+
+      var graphs2 = {{graphJSON2 | safe}};
+      Plotly.plot('chart2',graphs2,{});
+
     </script>
       
     </body>
