Added name dropdown, added year/name homepages, and  made color for name chart dynamic

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
           </div>
         </nav>
 
-      <div class="row"><a class="btn btn-secondary btn-lg p-5" href="/start" role="button">Analysis by Year</a></div>
-      <div class="row"><a class="btn btn-success btn-lg p-5" href="/start_end" role="button">Analysis by Name</a></div>
+      <div class="row"><a class="btn btn-secondary btn-lg p-5" href="/year_home" role="button">Analysis by Year</a></div>
+      <div class="row"><a class="btn btn-success btn-lg p-5" href="/name_home" role="button">Analysis by Name</a></div>
       
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
