Added other js charts, updated theme and layout, and added name-not-found routes

--- a/templates/year.html
+++ b/templates/year.html
@@ -14,7 +14,17 @@
     <body class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">What Year Were You Born?</a>
+          <a class="navbar-brand" href="/" style="font-family: Great Vibes; font-size: 48px;"> <span style="color: #0180CB;">California</span>  <span style="color: #FFC310;">Babes</span></a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/name_home">By Name</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"  href="/year_home">By Year</a>
+              </li>
+            </ul>
+          </div>
     
         </div>
       </nav>
