--- a/templates/year_home.html
+++ b/templates/year_home.html
@@ -9,14 +9,24 @@
 
         <title>Baby Names</title>
         {% endblock %}
+        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body class="">
       <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/">What's Your Name?</a>
-      
+            <a class="navbar-brand" href="/" style="font-family: Great Vibes; font-size: 48px;"> <span style="color: #0180CB;">California</span>  <span style="color: #FFC310;">Babes</span></a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/name_home">By Name</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link"  href="/year_home">By Year</a>
+                      </li>
+                </ul>
+              </div>      
           </div>
         </nav>
         <div class="" style="justify-content: center; text-align: center;">
