--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,32 @@
 <!doctype html>
 <html lang="en">
     <head>
-        {% block head %}
+      
      
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
         <title>Baby Names</title>
-        {% endblock %}
+        
+        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body class="">
       <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/">What's Your Name?</a>
+            <a class="navbar-brand" href="/" style="font-family: Great Vibes; font-size: 48px;"> <span style="color: #0180CB;">California</span>  <span style="color: #FFC310;">Babes</span></a>
+            <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon text-light"></span>
+            </button>
+            
       
           </div>
         </nav>
 
-      <div class="row"><a class="btn btn-secondary btn-lg p-5" href="/year_home" role="button">Analysis by Year</a></div>
-      <div class="row"><a class="btn btn-success btn-lg p-5" href="/name_home" role="button">Analysis by Name</a></div>
+      <div class="row"><a class="btn btn-light btn-lg p-5" href="/year_home" role="button"><span style="color: #0180CB;">Search by Year</span></a></div>
+      <div class="row"><a class="btn btn-light btn-lg p-5" href="/name_home" role="button"><span style="color: #FFC310;">Search by Name</span></a></div>
       
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
