--- a/templates/name_home.html
+++ b/templates/name_home.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>
@@ -23,6 +24,7 @@
         {% endblock %}
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 
         <!-- <script>
 
@@ -40,8 +42,17 @@
     <body class="">
       <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/">What's Your Name?</a>
-      
+            <a class="navbar-brand" href="/" style="font-family: Great Vibes; font-size: 48px;"> <span style="color: #0180CB;">California</span>  <span style="color: #FFC310;">Babes</span></a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="/name_home">by Name</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"  href="/year_home">by Year</a>
+                  </li>
+                </ul>
+              </div>      
           </div>
         </nav>
         <div class="py-5" style="justify-content: center; text-align: center;">
@@ -57,6 +68,7 @@
             <option value="http://127.0.0.1:5000/name_home/AARON"/>AARON </option>
             <option value="http://127.0.0.1:5000/name_home/ABIGAIL"/>ABIGAIL </option>
             <option value="http://127.0.0.1:5000/name_home/ADAM"/>ADAM </option>
+            <option value="http://127.0.0.1:5000/name_home/ADESUWA"/>ADESUWA </option>
             <option value="http://127.0.0.1:5000/name_home/ADRIAN"/>ADRIAN </option>
             <option value="http://127.0.0.1:5000/name_home/AIDEN"/>AIDEN </option>
             <option value="http://127.0.0.1:5000/name_home/ALEXA"/>ALEXA </option>
@@ -74,6 +86,7 @@
             <option value="http://127.0.0.1:5000/name_home/ANGEL"/>ANGEL </option>
             <option value="http://127.0.0.1:5000/name_home/ANGELA"/>ANGELA </option>
             <option value="http://127.0.0.1:5000/name_home/ANGELINA"/>ANGELINA </option>
+            <option value="http://127.0.0.1:5000/name_home/ANNA"/>ANNA </option>
             <option value="http://127.0.0.1:5000/name_home/ANTHONY"/>ANTHONY </option>
             <option value="http://127.0.0.1:5000/name_home/ARIA"/>ARIA </option>
             <option value="http://127.0.0.1:5000/name_home/ASHLEY"/>ASHLEY </option>
