--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,13 @@
         <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    
+        <link rel="stylesheet" href="static/style.css">
+        
+
     </head>
     <body class="">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg bg-white">
           <div class="container-fluid">
             <a class="navbar-brand" href="/" style="font-family: Great Vibes; font-size: 48px;"> <span style="color: #0180CB;">California</span>  <span style="color: #FFC310;">Babes</span></a>
             <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,8 +29,11 @@
           </div>
         </nav>
 
-      <div class="row"><a class="btn btn-light btn-lg p-5" href="/year_home" role="button"><span style="color: #0180CB;">Search by Year</span></a></div>
-      <div class="row"><a class="btn btn-light btn-lg p-5" href="/name_home" role="button"><span style="color: #FFC310;">Search by Name</span></a></div>
+        <div class="container py-5" style="margin-top: 6em;">
+          <div class="row"><a class="btn btn-lg p-5" href="/year_home" role="button" style=" background-color: rgba(1,128,203, .4);"><span style="color: white; font-weight: 700;">Search by Year</span></a></div>
+          <div class="row"><a class="btn btn-lg p-5" href="/name_home" role="button" style=" background-color: rgba(255,195,16, .5);"><span style="color: white;  font-weight: 700;">Search by Name</span></a></div>
+        </div>
+      
       
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
