--- a/templates/name_not_found.html
+++ b/templates/name_not_found.html
@@ -59,7 +59,8 @@
           }
         </script>
         <title>Baby Names</title>
-        
+        <link rel="stylesheet" href="static/style.css">
+
         <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
