--- a/templates/year.html
+++ b/templates/year.html
@@ -8,11 +8,13 @@
 
         <title>Birth Year</title>
         {% endblock %}
+        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="static/style.css">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body class="">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar bg-white navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="/" style="font-family: Great Vibes; font-size: 48px;"> <span style="color: #0180CB;">California</span>  <span style="color: #FFC310;">Babes</span></a>
           <div class="collapse navbar-collapse" id="navbarNav">
