--- a/templates/name_home.html
+++ b/templates/name_home.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="static/style.css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>
